
TIP: E.g. release 0.5.6 was the 6th release in iteration number 5.

NOTE: References to user stories are in the form Iteration/Story-Number.

////

[[v0.0.0]]
== [0.0.0] -- 2018-00-00

{url-cl}<prev>++...++main[Full Changelog]

.Added

.Changed

.Deprecated

.Removed

.Fixed

.Security

////


[[unreleased]]
== [unreleased]

{url-cl}2.1.5++...++main[Full Changelog]

.Added

////
.Changed

.Deprecated

.Removed

.Fixed

.Security

////


[[v2.1.5]]
== {url-tree}2.1.5[2.1.5] -- 2025-06-09

.Changed
- Bumped spring-boot, wicket, wicket-boostrap, wicketstuff,
  kotlin, kotlinx-coroutines,
  spring-cloud, feign, spring-boot-admin-starter-client, guava,
  gradle,
  mockk, equalsverifier,
  jaxb-gradle-plugin, lombok-gradle-plugin, sonarqube gradle plugin, reckon-gradle-plugin


[[v2.1.4]]
== {url-tree}2.1.4[2.1.4] -- 2025-03-21

.Changed
- reconfigured renovate to pin github action digists
- Bumped kotlin, spring-boot, guava, spring-cloud-starter-openfeign,
  equalsverifier,
  actions/cache, actions/upload-artifact, docker/login-action


[[v2.1.3]]
== {url-tree}2.1.3[2.1.3] -- 2025-03-13

.Changed
- Bumped lombok, spring-boot-admin-starter-client

.Fixed
- {url-issues}848[#848] Fix exporting papers to RIS format with very large pages indication


[[v2.1.2]]
== {url-tree}2.1.2[2.1.2] -- 2025-02-27

.Added
- {url-issues}843[#843] Add field "Statistical Method" to Review csv (and PDF) exports

.Changed
- Bumped spring-boot, kotlin, jOOQ, spring-boot-admin-starter-client, lombok, wicketstuff,
  detekt, mockk, equalsverifier,
  gradle


[[v2.1.1]]
== {url-tree}2.1.1[2.1.1] -- 2025-01-25

.Changed
- Bumped spring-boot, wicket, jOOQ, KRis, lombok,
  mockk, equalsverifier,
  gradle

- Removed debug logs for complex search


[[v2.1.0]]
== {url-tree}2.1.0[2.1.0] -- 2025-01-08

.Changed
- Bumped kotlin, coroutines, wicket-bootstrap, wicketstuff,
  mockk, equalsverifier,
  gradle


[[v2.0.11]]
== {url-tree}2.0.11[2.0.11] -- 2024-12-19

.Changed